# FocusApp

./: App.js  OverView.txt  OverlayEntry.js  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/focusapp/: AppMonitorService.java  AppMonitorService.kt  AppUtilsModule.java  AppUtilsModule.kt  AppUtilsPackage.java  AppUtilsPackage.kt  MainActivity.kt  MainApplication.kt  OverlayBroadcastReceiver.java  SetupActivity.java  TransparentActivity.java
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: styles.xml
ios/: Podfile
ios/FocusApp/: AppDelegate.swift  Info.plist
ios/FocusApp.xcodeproj/: project.pbxproj
src/components/: AccessSetupModal.js  AccessSetupOverlay.js  AppListItem.js  AppRow.js  FocusHeader.js  LockOverlay.js  OverlayWrapper.js  SectionHeader.js
src/components/app/: AccessSetupModal.js  AppRow.js  FocusHeader.js  LockOverlay.js  SectionHeader.js  TimePicker.js
src/components/common/: Button.js
src/context/: AppContext.js
src/data/: apps.js
src/hooks/: useInstalledApps.js
src/navigation/: AppNavigator.js
src/screens/: AppAccessScreen.js  FocusScreen.js  LockedAppScreen.js  MotivationalSettings.js
src/services/: appBlocker.js  appMonitor.js  storage.js  timeTracker.js  uiManager.js
src/utils/: appUtils.js  nativeModules.js  timeUtils.js
